[OWL-5246] port forums to OWL 22