@@ -39,16 +39,19 @@ import java.util.List;
 import java.util.Locale;
 import java.util.Map;
 import java.util.Map.Entry;
+import java.util.Objects;
+import java.util.Optional;
 import java.util.Set;
 import java.util.SortedSet;
 import java.util.stream.Collectors;
 import java.util.StringTokenizer;
 import java.util.TimeZone;
 import java.util.TreeSet;
+import java.util.stream.Collectors;
 
-import javax.faces.bean.ManagedProperty;
 import javax.faces.application.FacesMessage;
 import javax.faces.bean.ManagedBean;
+import javax.faces.bean.ManagedProperty;
 import javax.faces.bean.SessionScoped;
 import javax.faces.component.UIData;
 import javax.faces.component.UIInput;
@@ -60,9 +63,21 @@ import javax.persistence.OptimisticLockException;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpSession;
 
+import lombok.Getter;
+import lombok.Setter;
+import lombok.extern.slf4j.Slf4j;
+
+import net.sf.json.JSON;
+import net.sf.json.JSONArray;
+import net.sf.json.JSONObject;
+import net.sf.json.JSONSerializer;
+import net.sf.json.JsonConfig;
+
 import org.apache.commons.fileupload.FileItem;
 import org.apache.commons.io.FileUtils;
+import org.apache.commons.lang.math.NumberUtils;
 import org.apache.commons.lang3.StringUtils;
+
 import org.sakaiproject.api.app.messageforums.AnonymousManager;
 import org.sakaiproject.api.app.messageforums.Area;
 import org.sakaiproject.api.app.messageforums.AreaManager;
@@ -92,6 +107,8 @@ import org.sakaiproject.api.app.messageforums.SynopticMsgcntrManager;
 import org.sakaiproject.api.app.messageforums.Topic;
 import org.sakaiproject.api.app.messageforums.cover.ForumScheduleNotificationCover;
 import org.sakaiproject.api.app.messageforums.cover.SynopticMsgcntrManagerCover;
+import org.sakaiproject.api.app.messageforums.events.ForumsMessageEventParams;
+import org.sakaiproject.api.app.messageforums.events.ForumsTopicEventParams;
 import org.sakaiproject.api.app.messageforums.ui.DiscussionForumManager;
 import org.sakaiproject.api.app.messageforums.ui.UIPermissionsManager;
 import org.sakaiproject.authz.api.AuthzGroup;
@@ -125,6 +142,8 @@ import org.sakaiproject.exception.IdUnusedException;
 import org.sakaiproject.exception.InUseException;
 import org.sakaiproject.exception.PermissionException;
 import org.sakaiproject.portal.util.PortalUtils;
+import org.sakaiproject.rubrics.api.RubricsConstants;
+import org.sakaiproject.rubrics.api.RubricsService;
 import org.sakaiproject.service.gradebook.shared.Assignment;
 import org.sakaiproject.service.gradebook.shared.GradeDefinition;
 import org.sakaiproject.service.gradebook.shared.GradebookService;
@@ -154,19 +173,6 @@ import org.sakaiproject.util.comparator.GroupTitleComparator;
 import org.sakaiproject.util.comparator.RoleIdComparator;
 
 import org.springframework.orm.hibernate5.HibernateOptimisticLockingFailureException;
-import org.sakaiproject.rubrics.api.RubricsConstants;
-import org.sakaiproject.rubrics.api.RubricsService;
-
-import lombok.Getter;
-import lombok.Setter;
-import lombok.extern.slf4j.Slf4j;
-import net.sf.json.JSON;
-import net.sf.json.JSONArray;
-import net.sf.json.JSONObject;
-import net.sf.json.JSONSerializer;
-import net.sf.json.JsonConfig;
-import org.sakaiproject.api.app.messageforums.events.ForumsMessageEventParams;
-import org.sakaiproject.api.app.messageforums.events.ForumsTopicEventParams;
 
 /**
  * @author <a href="mailto:rshastri@iupui.edu">Rashmi Shastri</a>
@@ -306,7 +312,6 @@ public class DiscussionForumTool {
   private static final String NO_GRADE_PTS = "cdfm_no_points_for_grade";
   private static final String TOO_LARGE_GRADE = "cdfm_too_large_grade";
   private static final String NO_ASSGN = "cdfm_no_assign_for_grade";
-  private static final String CONFIRM_DELETE_MESSAGE="cdfm_delete_msg";
   private static final String INSUFFICIENT_PRIVILEGES_TO_DELETE = "cdfm_insufficient_privileges_delete_msg";
   private static final String END_DATE_BEFORE_OPEN_DATE = "endDateBeforeOpenDate";
   private static final String NO_GROUP_SELECTED ="cdfm_no_group_selected";
@@ -345,7 +350,8 @@ public class DiscussionForumTool {
   private String selectedMessageShow = SUBJECT_ONLY;
   private String selectedMessageOrganize = "thread"; 
   private String threadAnchorMessageId = null;
-  private boolean deleteMsg;
+  private static final long NO_MESSAGE = Long.MIN_VALUE;
+  private long deleteMsg = NO_MESSAGE;
   private boolean displayUnreadOnly;
   private boolean errorSynch = false;
   // attachment
@@ -534,6 +540,15 @@ public class DiscussionForumTool {
 		return (GradebookService)  ComponentManager.get("org.sakaiproject.service.gradebook.GradebookService");
 	}
 	return null;
+  }
+
+  public int getSelectedForumTotalNoMessages()
+  {
+      int total = 0;
+      if (selectedForum != null) {
+        total = selectedForum.getTopics().stream().map(DiscussionTopicBean::getTotalNoMessages).reduce(0, Integer::sum);
+      }
+      return total;
   }
 
   /**
@@ -1026,6 +1041,7 @@ public class DiscussionForumTool {
       log.error("Forum not found");
       return gotoMain();
     }
+	setForumBeanAssign();
     return FORUM_DETAILS;
   }
 
@@ -1041,8 +1057,19 @@ public class DiscussionForumTool {
 
 	  String forumId = getExternalParameterByKey(FORUM_ID);
 	  DiscussionForum forum = forumManager.getForumById(Long.valueOf(forumId));
-	  selectedForum = new DiscussionForumBean(forum, forumManager, userTimeService);
-	  loadForumDataInForumBean(forum, selectedForum);
+	  if (forum == null)
+	  {
+		  log.error("Forum {} not found.", forumId);
+		  return gotoMain();
+	  }
+	  DiscussionForumBean bean = getDecoratedForum(forum);
+	  if (!bean.isChangeSettings())
+	  {
+		  log.error("User has no permission to delete forum {}", forumId);
+		  return gotoMain();
+	  }
+	  selectedForum = bean;
+	  setForumBeanAssign();
 
 	  selectedForum.setMarkForDeletion(true);
 	  return FORUM_SETTING;
@@ -1214,12 +1241,7 @@ public class DiscussionForumTool {
       }
     }
     
-    selectedForum = new DiscussionForumBean(forum, forumManager, userTimeService);
-    loadForumDataInForumBean(forum, selectedForum);
-    if("true".equalsIgnoreCase(ServerConfigurationService.getString("mc.defaultLongDescription")))
-    {
-    	selectedForum.setReadFullDesciption(true);
-    }
+    selectedForum = getDecoratedForum(forum);
 
     setForumBeanAssign();
     setFromMainOrForumOrTopic();
@@ -1367,6 +1389,12 @@ public class DiscussionForumTool {
     
     if (selectedForum == null)
         throw new IllegalStateException("selectedForum == null");
+
+	// Block going to draft if the forum has one or more non-deleted message in any topic
+    if(getSelectedForumTotalNoMessages() > 0) {
+        log.warn("Invalid attempt to make forum draft, forum has non-deleted messages");
+        return FORUM_SETTING_REVISE;
+    }
     
     if(selectedForum.getForum() != null && selectedForum.getForum().getOpenDate() != null && selectedForum.getForum().getCloseDate() != null
     		&& selectedForum.getForum().getAvailabilityRestricted()){
@@ -1563,6 +1591,22 @@ public class DiscussionForumTool {
   }
 
   /**
+   * Determine if the selected topic has any visible messages. Visible meaning there is at least one message that is not deleted and not moved.
+   * @return true if there are non-deleted, non-moved messages, false otherwise.
+   */
+  public boolean topicHasVisibleMessages()
+  {
+      boolean hasVisibleMessages = false;
+      DiscussionTopicBean topic = getSelectedTopic();
+      if(topic != null)
+      {
+          List<DiscussionMessageBean> messages = topic.getMessages();
+          hasVisibleMessages = messages.stream().anyMatch(dmb -> !dmb.getDeleted() && !dmb.isMoved());
+      }
+      return hasVisibleMessages;
+  }
+
+  /**
    * @return Returns the selectedTopic.
    */
   public DiscussionTopicBean getSelectedTopic()
@@ -1579,6 +1623,11 @@ public class DiscussionForumTool {
   		selectedTopic.setSorted(true);
   	}
   	return selectedTopic;
+  }
+
+  public List<DiscussionTopicBean> getSelectedTopicAsList()
+  {
+	  return Collections.singletonList(getSelectedTopic());
   }
   
   /**
@@ -1629,6 +1678,7 @@ public class DiscussionForumTool {
   /**
    * @return
    */
+  @Deprecated
   public String processActionReviseTopicSettings()
   {
     log.debug("processActionReviseTopicSettings()");
@@ -1646,8 +1696,7 @@ public class DiscussionForumTool {
 
     if (topic == null)
     {
-      topic = forumManager.getTopicById(Long.valueOf(
-          getExternalParameterByKey(TOPIC_ID)));
+      topic = forumManager.getTopicById(Long.valueOf(getExternalParameterByKey(TOPIC_ID)));
     }
     if (topic == null)
     {
@@ -1656,21 +1705,21 @@ public class DiscussionForumTool {
       return gotoMain();
     }
   
-    setSelectedForumForCurrentTopic(topic);
-    selectedTopic = new DiscussionTopicBean(topic, selectedForum.getForum(), forumManager, rubricsService, userTimeService);
-    loadTopicDataInTopicBean(topic, selectedTopic);
-    if("true".equalsIgnoreCase(ServerConfigurationService.getString("mc.defaultLongDescription")))
-    {
-    	selectedTopic.setReadFullDesciption(true);
-    }
-
-    setTopicBeanAssign();
-    
-    if(!uiPermissionsManager.isChangeSettings(selectedTopic.getTopic(),selectedForum.getForum()))
+   	// NOTE: this method is believed to be unreachable. The only thing that calls it is a button on dfTopicSettings.jsp (which is NOT the settings page)
+	// that will never be rendered. As such, the modifications here have not been tested.
+	Optional<DiscussionForum> forum = forumManager.getDiscussionForumForTopic(topic);
+	if(!forum.isPresent() || !uiPermissionsManager.isChangeSettings(topic, forum.get()) || !uiPermissionsManager.hasAccessPrivileges(forum.get()))
     {
       setErrorMessage(getResourceBundleString(INSUFFICIENT_PRIVILEGES_NEW_TOPIC));
       return gotoMain();
     }
+	// now we are validated so we can safely set the selected* vars
+	// note that getDecoratedTopic expects setSelectedForum to have already run, so we must call it first to avoid NPE
+	setSelectedForumAfterValidation(forum.get());
+	selectedTopic = getDecoratedTopic(topic);
+
+    setTopicBeanAssign();
+
     List attachList = selectedTopic.getTopic().getAttachments();
     if (attachList != null)
     {
@@ -1843,6 +1892,12 @@ public class DiscussionForumTool {
   public String processActionSaveTopicAsDraft()
   {
     log.debug("processActionSaveTopicAsDraft()");
+
+	// Block going to draft if the topic has one or more non-deleted message
+    if(selectedTopic != null && selectedTopic.getTotalNoMessages() > 0) {
+        log.warn("Invalid attempt to make topic draft, topic has non-deleted messages");
+        return TOPIC_SETTING_REVISE;
+    }
     
     if(selectedTopic != null && selectedTopic.getTopic() != null
             && selectedTopic.getTopic().getOpenDate() != null && selectedTopic.getTopic().getCloseDate() != null
@@ -1967,7 +2022,6 @@ public class DiscussionForumTool {
    */
   public String processActionDeleteTopicMainConfirm()
   {
-	  {
 		  log.debug("processActionTopicSettings()");
 
 		  DiscussionTopic topic = null;
@@ -1982,17 +2036,18 @@ public class DiscussionForumTool {
 		  {
 			  return gotoMain();
 		  }
-		  setSelectedForumForCurrentTopic(topic);
-		  if(!uiPermissionsManager.isChangeSettings(topic,selectedForum.getForum()))
+		  Optional<DiscussionForum> forum = forumManager.getDiscussionForumForTopic(topic);
+		  if(!forum.isPresent() || !uiPermissionsManager.isChangeSettings(topic, forum.get()) || !uiPermissionsManager.hasAccessPrivileges(forum.get()))
 		  {
 			  setErrorMessage(getResourceBundleString(INSUFFICIENT_PRIVILEGES_NEW_TOPIC));
 			  return gotoMain();
 		  }
-		  selectedTopic = new DiscussionTopicBean(topic, selectedForum.getForum(), forumManager, rubricsService, userTimeService);
-		  loadTopicDataInTopicBean(topic, selectedTopic);
+		  // now we are validated so we can safely set the selected* vars
+		  // note that getDecoratedTopic expects setSelectedForum to have already run, so we must call it first to avoid NPE
+		  setSelectedForumAfterValidation(forum.get());
+		  selectedTopic = getDecoratedTopic(topic);
 		  selectedTopic.setMarkForDeletion(true);
 		    return TOPIC_SETTING;
-	  }
   }
 
   
@@ -2002,7 +2057,7 @@ public class DiscussionForumTool {
   public String processActionDeleteTopicConfirm()
   {
     log.debug("processActionDeleteTopicConfirm()");
-    
+    setFromMainOrForumOrTopic();
     if (selectedTopic == null)
     {
       log.debug("There is no topic selected for deletion");
@@ -2059,7 +2114,7 @@ public class DiscussionForumTool {
     
     topicClickCount = 0;
     forumClickCount = 0;
-    
+    setFromMainOrForumOrTopic();
     setEditMode(true);
     setPermissionMode(PERMISSION_MODE_TOPIC);
     permissions=null;
@@ -2067,9 +2122,7 @@ public class DiscussionForumTool {
     DiscussionTopic topic = null;
     String topicId = getExternalParameterByKey(TOPIC_ID);
     if(StringUtils.isNotBlank(topicId) && !"null".equals(topicId)){
-	    topic = (DiscussionTopic) forumManager
-	        .getTopicByIdWithAttachments(Long.valueOf(
-	            topicId));
+	    topic = (DiscussionTopic) forumManager.getTopicByIdWithAttachments(Long.valueOf(topicId));
     } else if(selectedTopic != null) {
     	topic = selectedTopic.getTopic();
     }
@@ -2077,18 +2130,15 @@ public class DiscussionForumTool {
     {
       return gotoMain();
     }
-    setSelectedForumForCurrentTopic(topic);
-    if(!uiPermissionsManager.isChangeSettings(topic,selectedForum.getForum()))
+    Optional<DiscussionForum> forum = forumManager.getDiscussionForumForTopic(topic);
+	if(!forum.isPresent() || !uiPermissionsManager.isChangeSettings(topic, forum.get()) || !uiPermissionsManager.hasAccessPrivileges(forum.get()))
     {
       setErrorMessage(getResourceBundleString(INSUFFICIENT_PRIVILEGES_NEW_TOPIC));
       return gotoMain();
     }
-    selectedTopic = new DiscussionTopicBean(topic, selectedForum.getForum(), forumManager, rubricsService, userTimeService);
-    loadTopicDataInTopicBean(topic, selectedTopic);
-    if("true".equalsIgnoreCase(ServerConfigurationService.getString("mc.defaultLongDescription")))
-    {
-    	selectedTopic.setReadFullDesciption(true);
-    }
+	// now we are validated so we can safely set the selected* vars
+	setSelectedForumAfterValidation(forum.get());
+    selectedTopic = getDecoratedTopic(topic);
     
     List attachList = selectedTopic.getTopic().getAttachments();
     if (attachList != null)
@@ -2101,12 +2151,12 @@ public class DiscussionForumTool {
     
     siteGroups.clear();
     setTopicBeanAssign();
-    setFromMainOrForumOrTopic();
     
     //return TOPIC_SETTING;
     return TOPIC_SETTING_REVISE;
   }
 
+  @Deprecated
   public String processActionToggleDisplayForumExtendedDescription()
   {
     log.debug("processActionToggleDisplayForumExtendedDescription()");
@@ -2139,6 +2189,7 @@ public class DiscussionForumTool {
   /**
    * @return
    */
+  @Deprecated
   public String processActionToggleDisplayExtendedDescription()
   {
     log.debug("processActionToggleDisplayExtendedDescription()");
@@ -2437,7 +2488,7 @@ public class DiscussionForumTool {
   public String processActionDisplayNextTopic()
   {
     log.debug("processActionDisplayNextTopic()");
-    return displayTopicById("nextTopicId");
+    return topicDest(displayTopicById("nextTopicId"));
   }
 
   /**
@@ -2446,7 +2497,17 @@ public class DiscussionForumTool {
   public String processActionDisplayPreviousTopic()
   {
     log.debug("processActionDisplayNextTopic()");
-    return displayTopicById("previousTopicId");
+    return topicDest(displayTopicById("previousTopicId"));
+  }
+
+  private String topicDest(String origDest)
+  {
+	  if (ALL_MESSAGES.equals(origDest) && "true".equals(getExternalParameterByKey(FLAT_VIEW)))
+	  {
+		  return FLAT_VIEW;
+	  }
+
+	  return origDest;
   }
 
   public  String formatStringByRemoveLastEmptyLine(String inputStr)
@@ -2484,6 +2545,12 @@ public class DiscussionForumTool {
 		 selectedMessage.getMessage().setBody(messageBodyWithoutLastEmptyLine); 		 
 	  }
     return selectedMessage;
+  }
+
+  public List<DiscussionMessageBean> getSelectedMessageAsList()
+  {
+	  DiscussionMessageBean msg = getSelectedMessage();
+	  return msg == null ? Collections.emptyList() : Collections.singletonList(msg);
   }
   
   public List getPFSelectedThread() 
@@ -2546,15 +2613,11 @@ public class DiscussionForumTool {
   }
     
   public boolean getNeedToPostFirst(){
-	  String currentUserId = getUserId();
-	  List<String> currentUser = new ArrayList<String>();
-	  currentUser.add(currentUserId);
 	  if (selectedTopic == null) {
 	      log.warn("selectedTopic null in getNeedToPostFirst");
 	      return true;
-	  } else {
-	      return getNeedToPostFirst(currentUser, selectedTopic.getTopic(), selectedTopic.getMessages()).contains(currentUserId);
 	  }
+	  return uiPermissionsManager.isUserDeniedByPostFirst(getUserId(), selectedTopic.getTopic());
   }
 
   /**
@@ -2563,36 +2626,11 @@ public class DiscussionForumTool {
    * @return
    */
   private List<String> getNeedToPostFirst(List<String> userIds, DiscussionTopic topic, List messages){
-	  List returnList = new ArrayList<String>();
-	  if(topic != null && topic.getPostFirst()){
-		  for(String userId : userIds){
-			  boolean needToPost = true;
-			  //make sure the user has posted before they can view all messages
-			  //only need to force this for users who do not have "ChangeSettings" permission
-			  for (Object messageObj : messages) {
-				  Message message = null;
-				  if(messageObj instanceof DiscussionMessageBean){
-					  message = ((DiscussionMessageBean) messageObj).getMessage();
-				  }else if(messageObj instanceof Message){
-					  message = (Message) messageObj;
-				  }
-				  if(message != null && message.getCreatedBy().equals(userId) && 
-						  !message.getDraft() && 
-						  ((message.getApproved() != null && message.getApproved()) || !topic.getModerated()) &&
-						  !message.getDeleted()){
-					  needToPost = false;
-					  break;
-				  }
-			  }
-			  if(needToPost && !(uiPermissionsManager.isChangeSettings(topic, (DiscussionForum) topic.getBaseForum(), userId)
-					   || uiPermissionsManager.isPostToGradebook(topic, (DiscussionForum) topic.getBaseForum(), userId)
-					   || uiPermissionsManager.isModeratePostings(topic, (DiscussionForum) topic.getBaseForum(), userId))){
-				  returnList.add(userId);
-			  }
-		  }
-	  }
-	  
-	  return returnList;
+	  List<Message> castedMessages = new ArrayList<>(messages.size());
+      for (Object m : messages) {
+          castedMessages.add(m instanceof DiscussionMessageBean ? ((DiscussionMessageBean) m).getMessage() : (Message) m);
+      }
+      return uiPermissionsManager.getUsersDeniedByPostFirst(userIds, topic, castedMessages);
   }
   
   public String processActionGetDisplayThread()
@@ -2621,7 +2659,7 @@ public class DiscussionForumTool {
 	    
 	    //determine to make sure that selectedThreadHead does exist!
 	    if(selectedThreadHead == null){
-	    	return MAIN;
+	    	return gotoMain();
 	    }
 	    
 	    for(int i=0; i<msgsList.size(); i++){
@@ -2654,6 +2692,15 @@ public class DiscussionForumTool {
 	    		((DiscussionMessageBean)selectedThread.get(i)).setRead(Boolean.TRUE);
 	    	}
 	    }
+		else  // calculate unread counts
+		{
+			List<DiscussionMessageBean> selThread = (List<DiscussionMessageBean>) selectedThread;
+			int threadUnreadCount = selThread.stream().map(m -> m.isRead() ? 0 : 1).reduce(0, Integer::sum);
+			Optional<DiscussionMessageBean> selHead = selThread.stream().filter(m -> m.getDepth() == 0).findAny();
+			selHead.ifPresent(m -> selectedThreadHead.setRead(m.isRead()));
+			int deduct = selectedThreadHead.isRead() ? 0 : 1;
+			selectedThreadHead.setChildUnread(threadUnreadCount - deduct);
+		}
 
 	    boolean postFirst = getNeedToPostFirst();	    
 	    if(postFirst){
@@ -2666,16 +2713,19 @@ public class DiscussionForumTool {
 
     private boolean didThreadMove() {
         threadMoved = false;
-        String message = selectedThreadHead.getMessage().toString();
-        List msgsList = selectedTopic.getMessages();
-        boolean listHasMessage = false;
-        for (int i = 0; i < msgsList.size(); i++) {
-            listHasMessage = message.equals(((DiscussionMessageBean) msgsList.get(i)).getMessage().toString());
-            if (listHasMessage) {
-                break;
-            }
-        }
-        threadMoved = !listHasMessage;
+		if (selectedThreadHead != null && selectedThreadHead.getMessage() != null && !selectedThreadHead.getMessage().getDeleted() && selectedTopic != null && selectedTopic.getMessages() != null)
+        {
+			String message = selectedThreadHead.getMessage().toString();
+			List msgsList = selectedTopic.getMessages();
+			boolean listHasMessage = false;
+			for (int i = 0; i < msgsList.size(); i++) {
+				listHasMessage = message.equals(((DiscussionMessageBean) msgsList.get(i)).getMessage().toString());
+				if (listHasMessage) {
+					break;
+				}
+			}
+			threadMoved = !listHasMessage;
+		}
         return threadMoved;
     }
 
@@ -2709,55 +2759,41 @@ public class DiscussionForumTool {
 
 	    threadAnchorMessageId = null;
 	    String threadId = getExternalParameterByKey(MESSAGE_ID);
-	    String topicId = getExternalParameterByKey(TOPIC_ID);
 	    if ("".equals(threadId) || null == threadId || "null".equals(threadId))
 	    {
 	      setErrorMessage(getResourceBundleString(MESSAGE_REFERENCE_NOT_FOUND));
 	      return gotoMain();
 	    }
-	    if ("".equals(topicId) || null == topicId || "null".equals(topicId))
-	    {
-	      setErrorMessage(getResourceBundleString(TOPC_REFERENCE_NOT_FOUND));
-	      return gotoMain();
-	    }
-	    // Message message=forumManager.getMessageById(Long.valueOf(messageId));
-	    Message threadMessage = messageManager.getMessageByIdWithAttachments(Long.valueOf(
-	        threadId));
+	    Message threadMessage = messageManager.getMessageByIdWithAttachments(Long.valueOf(threadId));
 	    if (threadMessage == null)
 	    {
 	      setErrorMessage(getResourceBundleString(MESSAGE_WITH_ID) + threadId + getResourceBundleString(NOT_FOUND_WITH_QUOTE));
 	      return gotoMain();
 	    }
-	    //threadMessage = messageManager.getMessageByIdWithAttachments(threadMessage.getId());
+	    Optional<DiscussionTopic> topic = forumManager.getDiscussionTopicForMessage(threadMessage);
+		if (!topic.isPresent())
+		{
+			return gotoMain();
+		}
+		Optional<DiscussionForum> forum = forumManager.getDiscussionForumForTopic(topic.get());
+		if (!forum.isPresent())
+		{
+			return gotoMain();
+		}
+		if (!uiPermissionsManager.hasAccessPrivileges(threadMessage, topic.get()))
+		{
+			setErrorMessage(getResourceBundleString(MESSAGE_WITH_ID) + threadId + getResourceBundleString(NOT_FOUND_WITH_QUOTE));
+			return gotoMain();
+		}
+
+		// the thread head is not validated separately, but not aware of any situations where validating the child message access is not enough
 	    selectedThreadHead = getThreadHeadForMessage(threadMessage);
 	    threadMessage = selectedThreadHead.getMessage();
 
-	    DiscussionTopic topic=forumManager.getTopicById(Long.valueOf(topicId));
 	    selectedMessage = selectedThreadHead;
-	    setSelectedForumForCurrentTopic(topic);
-	    selectedTopic = new DiscussionTopicBean(topic, selectedForum.getForum(), forumManager, rubricsService, userTimeService);
-	    loadTopicDataInTopicBean(topic, selectedTopic);
-	    if(topic == null || selectedTopic == null)
-	    {
-	    	log.debug("topic or selectedTopic is null in processActionDisplayThread.");
-	    	return gotoMain();
-	    }
-	    if("true".equalsIgnoreCase(ServerConfigurationService.getString("mc.defaultLongDescription")))
-	    {
-	    	selectedTopic.setReadFullDesciption(true);
-	    }
-	    setTopicBeanAssign();
-	    String currentForumId = getExternalParameterByKey(FORUM_ID);
-	    if (currentForumId != null && (!"".equals(currentForumId.trim()))
-	        && (!"null".equals(currentForumId.trim())))
-	    {
-	      DiscussionForum forum = forumManager
-	          .getForumById(Long.valueOf(currentForumId));
-	      selectedForum = new DiscussionForumBean(forum, forumManager, userTimeService);
-	      loadForumDataInForumBean(forum, selectedForum);
-	      setForumBeanAssign();
-	      selectedTopic.getTopic().setBaseForum(forum);
-	    }
+	    setSelectedForumAfterValidation(forum.get());
+		topic.get().setBaseForum(forum.get()); // prefer getOpenForum() but some code will still use getBaseForum()
+
 	    // don't need this here b/c done in processActionGetDisplayThread();
 	    // selectedTopic = getDecoratedTopic(topic);
 	    LRS_Statement statement = forumManager.getStatementForUserReadViewed(threadMessage.getTitle(), "thread").orElse(null);
@@ -2773,7 +2809,10 @@ public class DiscussionForumTool {
   public String processActionDisplayThreadAnchor()
   {
 	  String returnString = processActionDisplayThread();
-	  threadAnchorMessageId = getExternalParameterByKey(MESSAGE_ID);
+	  if (!gotoMain().equals(returnString))
+	  {
+		  threadAnchorMessageId = getExternalParameterByKey(MESSAGE_ID);
+	  }
 	  return returnString;
   }
 
@@ -2787,66 +2826,49 @@ public class DiscussionForumTool {
    selectedMessageCount ++;
 
     String messageId = getExternalParameterByKey(MESSAGE_ID);
-    String topicId = getExternalParameterByKey(TOPIC_ID);
     if (messageId == null || "".equals(messageId))
     {
       setErrorMessage(getResourceBundleString(MESSAGE_REFERENCE_NOT_FOUND));
       return gotoMain();
     }
-    if (topicId == null || "".equals(topicId))
-    {
-      setErrorMessage(getResourceBundleString(TOPC_REFERENCE_NOT_FOUND));
-      return gotoMain();
-    }
-    // Message message=forumManager.getMessageById(Long.valueOf(messageId));
-    messageManager.markMessageReadForUser(Long.valueOf(topicId),
-            Long.valueOf(messageId), true);
-    Message message = messageManager.getMessageByIdWithAttachments(Long.valueOf(
-        messageId));
-
+    Message message = messageManager.getMessageByIdWithAttachments(Long.valueOf(messageId));
     if (message == null)
     {
       setErrorMessage(getResourceBundleString(MESSAGE_WITH_ID) + messageId + getResourceBundleString(NOT_FOUND_WITH_QUOTE));
       return gotoMain();
     }
-
+	Optional<DiscussionTopic> topic = forumManager.getDiscussionTopicForMessage(message);
+	if (!topic.isPresent())
+	{
+		return gotoMain();
+	}
+	Optional<DiscussionForum> forum = forumManager.getDiscussionForumForTopic(topic.get());
+	if (!forum.isPresent())
+	{
+		return gotoMain();
+	}
+	if (!uiPermissionsManager.hasAccessPrivileges(message, topic.get()))
+	{
+		// error message doesn't really matter (gotoMain() generally will not result in any UI messages appearing)
+		setErrorMessage(getResourceBundleString(MESSAGE_WITH_ID) + messageId + getResourceBundleString(NOT_FOUND_WITH_QUOTE));
+		return gotoMain();
+	}
+	messageManager.markMessageReadForUser(topic.get().getId(), message.getId(), true);
     selectedMessage = new DiscussionMessageBean(message, messageManager);
-    DiscussionTopic topic=forumManager.getTopicById(Long.valueOf(topicId));
-    setSelectedForumForCurrentTopic(topic);
-    selectedTopic = new DiscussionTopicBean(topic, selectedForum.getForum(), forumManager, rubricsService, userTimeService);
-    loadTopicDataInTopicBean(topic, selectedTopic);
-    if(topic == null || selectedTopic == null)
-    {
-    	log.debug("topic or selectedTopic is null in processActionDisplayMessage.");
-    	return gotoMain();
-    }
-    if("true".equalsIgnoreCase(ServerConfigurationService.getString("mc.defaultLongDescription")))
-    {
-    	selectedTopic.setReadFullDesciption(true);
-    }
-    setTopicBeanAssign();
-    String currentForumId = getExternalParameterByKey(FORUM_ID);
-    if (currentForumId != null && (!"".equals(currentForumId.trim()))
-        && (!"null".equals(currentForumId.trim())))
-    {
-      DiscussionForum forum = forumManager
-          .getForumById(Long.valueOf(currentForumId));
-      selectedForum = new DiscussionForumBean(forum, forumManager, userTimeService);
-      loadForumDataInForumBean(forum, selectedForum);
-      setForumBeanAssign();
-      selectedTopic.getTopic().setBaseForum(forum);
-    }
-    selectedTopic = getDecoratedTopic(topic);
+	selectedMessage.setRead(true);
+    setSelectedForumAfterValidation(forum.get());
+	topic.get().setBaseForum(forum.get()); // prefer getOpenForum() but some code will still use getBaseForum()
+    selectedTopic = getDecoratedTopic(topic.get());
     setTopicBeanAssign();
     selectedTopic = getSelectedTopic();
-    //get thread from message
     getThreadFromMessage();
     refreshSelectedMessageSettings(message);
-    // selectedTopic= new DiscussionTopicBean(message.getTopic()); 
+ 
     LRS_Statement statement = forumManager.getStatementForUserReadViewed(message.getTitle(), "thread").orElse(null);
 	Event event = eventTrackingService.newEvent(DiscussionForumService.EVENT_FORUMS_READ, getEventReference(message), null, true, NotificationService.NOTI_OPTIONAL, statement);
     eventTrackingService.post(event);
 
+	setFromMainOrForumOrTopic();
     return MESSAGE_VIEW;
   }
   
@@ -2860,6 +2882,7 @@ public class DiscussionForumTool {
 	    	mes = messageManager.getMessageById(mes.getInReplyTo().getId());
 	    }
 	    selectedThreadHead = new DiscussionMessageBean(mes, messageManager);
+		selectedThreadHead.setRead(messageManager.isMessageReadForUser(mes.getTopic().getId(), mes.getId()));
 	    
 	    if(selectedTopic == null)
 	    {
@@ -2932,7 +2955,7 @@ public class DiscussionForumTool {
 			
 	    messageManager.markMessageReadForUser(selectedTopic.getTopic().getId(),
 	        selectedMessage.getMessage().getId(), true);
-	    
+	    selectedMessage.setRead(true);
 	    refreshSelectedMessageSettings(message);  
     }
     LRS_Statement statement = forumManager.getStatementForUserReadViewed(selectedMessage.getMessage().getTitle(), "thread").orElse(null);
@@ -2976,7 +2999,7 @@ public class DiscussionForumTool {
 			
 	    messageManager.markMessageReadForUser(selectedTopic.getTopic().getId(),
 	        selectedMessage.getMessage().getId(), true);
-	    
+	    selectedMessage.setRead(true);
 	    refreshSelectedMessageSettings(message);  
     }
     LRS_Statement statement = forumManager.getStatementForUserReadViewed(selectedMessage.getMessage().getTitle(), "thread").orElse(null);
@@ -3179,7 +3202,21 @@ public class DiscussionForumTool {
       {
         return null;
       }
-      selectedForum = getDecoratedForum(forum);
+      if (uiPermissionsManager.hasAccessPrivileges(forum))
+	  {
+		  // if the user has access but the forum belongs to another site it is rendered in the current site,
+		  // which is strange. However, there is virtually no chance of this happening without tampering.
+		  // Adding a check that the requested forum belongs to the current site might improve this
+		  // but it could present issues for scenarios where there is no current site, such as with rest endpoints.
+		  selectedForum = getDecoratedForum(forum);
+	  }
+	  else
+	  {
+		  // maybe do something else here like throw an exception that redirects to an error page. There could be
+		  // cases where the user is presented with a legitimate link that is not currently valid, like an entity link
+		  // to a forum that is currently date restricted.
+		  log.warn("Attempted access to forum {} but user {} does not have permission", forum.getId(), getUserId());
+	  }
       return selectedForum;
     }
     return null;
@@ -3189,6 +3226,7 @@ public class DiscussionForumTool {
   /**
    * @return
    */
+  @Deprecated
   private String displayHomeWithExtendedForumDescription()
   {
     log.debug("displayHomeWithExtendedForumDescription()");
@@ -3397,8 +3435,6 @@ public class DiscussionForumTool {
     		decoTopic.setUnreadNoMessages(forumManager.getNumUnreadViewableMessagesWhenMod(topic));
     	}
 
-        setTopicGradeAssign(decoTopic, selectedForum.getForum().getDefaultAssignName());
-
     	Iterator iter = temp_messages.iterator();
 
     	final boolean isRead = decoTopic.getIsRead();
@@ -3454,6 +3490,8 @@ public class DiscussionForumTool {
     		}
     	}
     }
+		setTopicGradeAssign(decoTopic, selectedForum.getForum().getDefaultAssignName());
+	
 		  //  now add moved messages to decoTopic
     	if(moved_messages != null){
 		  for (Iterator msgIter = moved_messages.iterator(); msgIter.hasNext();) {
@@ -3577,37 +3615,26 @@ public class DiscussionForumTool {
 
   private Boolean resetTopicById(String externalTopicId)
   {
-	  String topicId = null;
-	    //threaded = true;
 	    selectedTopic = null;
 	    try
 	    {
-	      topicId = getExternalParameterByKey(externalTopicId);
-
-	      if (topicId != null && topicId.trim().length() > 0)
-	      {
-	        DiscussionTopic topic = null;
-	        try
-	        {
-	          Long.parseLong(topicId);
-	          topic = forumManager.getTopicById(Long.valueOf(topicId));
-	        }
-	        catch (NumberFormatException e)
-	        {
-	          log.error(e.getMessage(), e);
-	          setErrorMessage(getResourceBundleString(UNABLE_RETRIEVE_TOPIC));
+	      String topicId = getExternalParameterByKey(externalTopicId);
+		  long id = NumberUtils.toLong(topicId, -1L);
+		  if (id < 0)
+		  {
+			  log.error("Topic with id '" + externalTopicId + "' not found");
+			  setErrorMessage(getResourceBundleString(TOPIC_WITH_ID) + externalTopicId + getResourceBundleString(NOT_FOUND_WITH_QUOTE));
+			  return false;
+		  }
+		  DiscussionTopic topic = forumManager.getTopicById(id);
+		  Optional<DiscussionForum> forum = forumManager.getDiscussionForumForTopic(topic);
+		  if (!forum.isPresent() || !uiPermissionsManager.hasAccessPrivileges(topic, forum.get()))
+		  {
+			  setErrorMessage(getResourceBundleString(UNABLE_RETRIEVE_TOPIC));
 	          return false;
-	        }
-
-	        setSelectedForumForCurrentTopic(topic);
-	        selectedTopic = getDecoratedTopic(topic);
-	      }
-	      else
-	      {
-	        log.error("Topic with id '" + externalTopicId + "' not found");
-	        setErrorMessage(getResourceBundleString(TOPIC_WITH_ID) + externalTopicId + getResourceBundleString(NOT_FOUND_WITH_QUOTE));
-	        return false;
-	      }
+		  }
+		  setSelectedForumAfterValidation(forum.get());
+		  selectedTopic = getDecoratedTopic(topic);
 	    }
 	    catch (Exception e)
 	    {
@@ -3666,6 +3693,14 @@ public class DiscussionForumTool {
     {
       setErrorMessage(getResourceBundleString(PARENT_TOPIC_NOT_FOUND));
       return null;
+    }
+	// pulling the forum here is a bit wasteful but there are other workflows that call createTopic
+	// and this one is only called when someone creates a new topic from the UI, so not that often
+	DiscussionForum forum = forumManager.getForumById(Long.valueOf(forumId));
+	if(forum != null && !uiPermissionsManager.isNewTopic(forum))
+    {
+      setErrorMessage(getResourceBundleString(INSUFFICIENT_PRIVILEGES_CREATE_TOPIC));
+	  return null;
     }
     return createTopic(Long.valueOf(forumId));
   }
@@ -3729,6 +3764,7 @@ public class DiscussionForumTool {
   // compose
   public String processAddMessage()
   {
+	setFromMainOrForumOrTopic();
     return MESSAGE_COMPOSE;
   }
 
@@ -3835,7 +3871,25 @@ public class DiscussionForumTool {
 
     this.attachments.clear();
 
-    return ALL_MESSAGES;
+    setFromMainOrForumOrTopic();
+    return returnFromPageOrAllMessages(ALL_MESSAGES);
+  }
+
+  /**
+   * Returns to the page fromPage is set to, or if not set, return to ALL_PAGES
+   * @param defaultReturnPage if not empty or null, return to defaultReturnPage if fromPage is not set.
+   *    If fromPage and defaultReturnPage are both not set, return to ALL_MESSAGES.
+   */
+  private String returnFromPageOrAllMessages(String defaultReturnPage)
+  {
+    if (!"".equals(fromPage)) {
+        final String where = fromPage;
+        fromPage = null;
+        return where;
+    }
+    else {
+        return StringUtils.isNotBlank(defaultReturnPage) ? defaultReturnPage : ALL_MESSAGES;
+    }
   }
 
   public String processDfMsgPost()
@@ -3881,7 +3935,7 @@ public class DiscussionForumTool {
     	return gotoMain();
     }
 
-    return ALL_MESSAGES;
+    return returnFromPageOrAllMessages(ALL_MESSAGES);
   }
   
   private void updateThreadLastUpdatedValue(Message message, int numOfAttempts) throws Exception{
@@ -4176,30 +4230,25 @@ public class DiscussionForumTool {
   /**
    * @return
    */
+  @Deprecated // seems this method is unused?
   public String processDfMsgMarkMsgAsRead()
   {
 	    String messageId = getExternalParameterByKey(MESSAGE_ID);
-	    String topicId = getExternalParameterByKey(TOPIC_ID);
 	    if (messageId == null)
 	    {
 	      setErrorMessage(getResourceBundleString(MESSAGE_REFERENCE_NOT_FOUND));
 	      return gotoMain();
 	    }
-	    if (topicId == null)
-	    {
-	      setErrorMessage(getResourceBundleString(TOPC_REFERENCE_NOT_FOUND));
-	      return gotoMain();
-	    }
-	    // Message message=forumManager.getMessageById(Long.valueOf(messageId));
-	    Message message = messageManager.getMessageByIdWithAttachments(Long.valueOf(
-	        messageId));
-	    messageManager.markMessageReadForUser(Long.valueOf(topicId),
-	        Long.valueOf(messageId), true);
-	    if (message == null)
-	    {
+	    Message message = messageManager.getMessageByIdWithAttachments(Long.valueOf(messageId));
+		Optional<DiscussionTopic> topic = forumManager.getDiscussionTopicForMessage(message);
+	    if (message == null || !topic.isPresent())
+		{
 	      setErrorMessage(getResourceBundleString(MESSAGE_WITH_ID) + messageId + getResourceBundleString(NOT_FOUND_WITH_QUOTE));
 	      return gotoMain();
 	    }
+		// marking a message as read applies only to the current user, so it is relatively harmless and doesn't really need validation
+		// resetTopicById provides validation on the topic access
+		messageManager.markMessageReadForUser(topic.get().getId(), message.getId(), true);
 	    if(resetTopicById(TOPIC_ID)){ // reconstruct topic again;
 	    	return null;
 	    } else {
@@ -4210,48 +4259,37 @@ public class DiscussionForumTool {
   /**
    * @return
    */
+  @Deprecated // seems this method is unused?
   public String processDfMsgMarkMsgAsReadFromThread()
   {
 	    String messageId = getExternalParameterByKey(MESSAGE_ID);
-	    String topicId = getExternalParameterByKey(TOPIC_ID);
 	    if (messageId == null)
 	    {
 	      setErrorMessage(getResourceBundleString(MESSAGE_REFERENCE_NOT_FOUND));
 	      return gotoMain();
 	    }
-	    if (topicId == null)
-	    {
-	      setErrorMessage(getResourceBundleString(TOPC_REFERENCE_NOT_FOUND));
-	      return gotoMain();
-	    }
-	    // Message message=forumManager.getMessageById(Long.valueOf(messageId));
-	    Message message = messageManager.getMessageByIdWithAttachments(Long.valueOf(
-	        messageId));
-	    messageManager.markMessageReadForUser(Long.valueOf(topicId),
-	        Long.valueOf(messageId), true);
-	    if (message == null)
+	    
+	    Message message = messageManager.getMessageByIdWithAttachments(Long.valueOf(messageId));
+	    Optional<DiscussionTopic> topic = forumManager.getDiscussionTopicForMessage(message);
+	    if (message == null || !topic.isPresent())
 	    {
 	      setErrorMessage(getResourceBundleString(MESSAGE_WITH_ID) + messageId + getResourceBundleString(NOT_FOUND_WITH_QUOTE));
 	      return gotoMain();
 	    }
+		// marking a message as read applies only to the current user, so it is relatively harmless and doesn't really need validation
+		messageManager.markMessageReadForUser(topic.get().getId(), message.getId(), true);
 	    return processActionGetDisplayThread(); // reconstruct thread again;
   }
   
   public String processDfMsgReplyMsgFromEntire()
   {
 	  	String messageIdStr = getExternalParameterByKey(MESSAGE_ID);
-	    String topicIdStr = getExternalParameterByKey(TOPIC_ID);
 	    if (messageIdStr == null || "".equals(messageIdStr))
 	    {
 	      setErrorMessage(getResourceBundleString(MESSAGE_REFERENCE_NOT_FOUND));
 	      return gotoMain();
 	    }
-	    if (topicIdStr == null || "".equals(topicIdStr))
-	    {
-	      setErrorMessage(getResourceBundleString(TOPC_REFERENCE_NOT_FOUND));
-	      return gotoMain();
-	    }
-	    long messageId, topicId;
+	    long messageId;
 	    try{
 	    	messageId = Long.valueOf(messageIdStr);
 	    }catch (NumberFormatException e) {
@@ -4259,24 +4297,22 @@ public class DiscussionForumTool {
 	    	setErrorMessage(getResourceBundleString(MESSAGE_REFERENCE_NOT_FOUND));
 	    	return gotoMain();
 		}
-	    try{
-	    	topicId = Long.valueOf(topicIdStr);
-	    }catch (NumberFormatException e) {
-	    	log.error(e.getMessage());
-	    	setErrorMessage(getResourceBundleString(TOPC_REFERENCE_NOT_FOUND));
-	    	return gotoMain();
-		}
 	    
-	    // Message message=forumManager.getMessageById(Long.valueOf(messageId));
-	    messageManager.markMessageReadForUser(topicId, messageId, true);
 	    Message message = messageManager.getMessageByIdWithAttachments(messageId);
-	    if (message == null)
+	    Optional<DiscussionTopic> topic = forumManager.getDiscussionTopicForMessage(message);
+		Optional<DiscussionForum> forum = forumManager.getDiscussionForumForTopic(topic.orElse(null));
+	    if (message == null || !topic.isPresent() || !forum.isPresent())
 	    {
 	      setErrorMessage(getResourceBundleString(MESSAGE_WITH_ID) + messageId + getResourceBundleString(NOT_FOUND_WITH_QUOTE));
 	      return gotoMain();
 	    }
-
+		if (!uiPermissionsManager.isNewResponseToResponse(topic.get(), forum.get()) || !uiPermissionsManager.hasAccessPrivileges(message, topic.get()))
+		{
+			return gotoMain();
+		}
+		messageManager.markMessageReadForUser(topic.get().getId(), messageId, true);
 	    selectedMessage = new DiscussionMessageBean(message, messageManager);
+		selectedMessage.setRead(true);
 	    
 	    return processDfMsgReplyMsg();
   }
@@ -4288,7 +4324,8 @@ public class DiscussionForumTool {
 	  this.composeTitle = getResourceBundleString(MSG_REPLY_PREFIX) + " " + selectedMessage.getMessage().getTitle() + " ";
     else
       this.composeTitle = selectedMessage.getMessage().getTitle();
-  	
+
+	setFromMainOrForumOrTopic();
     return "dfMessageReply";
   }
 
@@ -4302,6 +4339,8 @@ public class DiscussionForumTool {
   	}
 	  // we have to get the first message that is not a response
 	  selectedMessage = getThreadHeadForMessage(selectedMessage.getMessage());
+	  messageManager.markMessageReadForUser(selectedTopic.getTopic().getId(), selectedMessage.getMessage().getId(), true);
+	  selectedMessage.setRead(true);
 	  
 	  List tempMsgs = selectedTopic.getMessages();
 	    if(tempMsgs != null)
@@ -4328,7 +4367,8 @@ public class DiscussionForumTool {
   {
     return "dfTopicReply";
   }
-  
+
+  @Deprecated // this is believed to be dead code
   public String processDfMsgGrdFromThread()
   {
 	  String messageId = getExternalParameterByKey(MESSAGE_ID);
@@ -4348,27 +4388,44 @@ public class DiscussionForumTool {
   }
   
   public String processDfMsgGrdFromThread(String messageId, String topicId, String forumId, String userId){
-	  
+
+	  // we have to do validation in this method, the code that reads the params is above (not used) and in a JSP,
+	  // so we can't trust the args for this method.
+	  // this method is tricky because it allows null/empty ids. seems like this is due to the strange way grading is done in forums.
+	  // to keep the same logic, instead of deriving the topic/forum from the message and ignoring those params, we have to instead validate all three separately
+
+	  if (StringUtils.isNotBlank(userId))
+	  {
+		  // make sure userId at least belongs to someone in the current site before we set the selectedGradedUserId,
+		  // to be on the safe side. There appear to be some grading permission checks later in processDfMsgGrdHelper().
+		  if (!isUserActiveInCurrentSite(userId)) {
+			  log.error("Attempt to grade user {} in site {}", userId, toolManager.getCurrentPlacement().getContext());
+			  return gotoMain();
+		  }
+	  }
 	  selectedGradedUserId = userId;
   
-	  // Message message=forumManager.getMessageById(Long.valueOf(messageId));
 	  if(messageId != null && !"".equals(messageId)){
-		  Message message = messageManager.getMessageByIdWithAttachments(Long.valueOf(
-				  messageId));
-		  if (message == null)
+		  Message message = messageManager.getMessageByIdWithAttachments(NumberUtils.toLong(messageId, -1L));
+		  if (message == null || !uiPermissionsManager.hasAccessPrivileges(message))
 		  {
 			  setErrorMessage(getResourceBundleString(MESSAGE_WITH_ID) + messageId + getResourceBundleString(NOT_FOUND_WITH_QUOTE));
 			  return gotoMain();
 		  }
 
 		  selectedMessage = new DiscussionMessageBean(message, messageManager);
+		  selectedMessage.setRead(true);  // it will be marked as read later in processDfMsgGrd()
 
 	  }else{
 		  selectedMessage = null;
 	  }
 
 	  if(selectedForum == null || (forumId != null && !selectedForum.getForum().getId().toString().equals(forumId))){
-		  DiscussionForum forum = forumManager.getForumById(Long.parseLong(forumId));
+		  DiscussionForum forum = forumManager.getForumById(NumberUtils.toLong(forumId, -1L));
+		  if (forum == null || !uiPermissionsManager.hasAccessPrivileges(forum))
+		  {
+			  return gotoMain();
+		  }
 		  selectedForum = new DiscussionForumBean(forum, forumManager, userTimeService);
 		  loadForumDataInForumBean(forum, selectedForum);
 	  }
@@ -4376,7 +4433,11 @@ public class DiscussionForumTool {
 	  if(topicId == null || "".equals(topicId)){
 		  selectedTopic = null;
 	  }else if(selectedTopic == null || !selectedTopic.getTopic().getId().toString().equals(topicId)){
-		  DiscussionTopic topic = forumManager.getTopicById(Long.parseLong(topicId));
+		  DiscussionTopic topic = forumManager.getTopicById(NumberUtils.toLong(topicId, -1L));
+		  if (topic == null || !uiPermissionsManager.hasAccessPrivileges(topic))
+		  {
+			  return gotoMain();
+		  }
 		  selectedTopic = getDecoratedTopic(topic);
 	  }    
 	    
@@ -4386,6 +4447,18 @@ public class DiscussionForumTool {
 		  return processDfMsgGrdHelper(userId, null);
 	  }
   }
+
+  public boolean isUserActiveInCurrentSite(String userId) {
+		String currentSiteId = toolManager.getCurrentPlacement().getContext();
+		try {
+			Site s = siteService.getSite(currentSiteId);
+			Member member = s.getMember(userId);
+			return member != null && member.isActive();
+		} catch (IdUnusedException e) {
+			log.error("Cannot determine current site, can't determine if user {} is an active site member", userId);
+		}
+		return false;
+	}
   
   public String processDfMsgGrd()
   {
@@ -4510,33 +4583,37 @@ public class DiscussionForumTool {
   
   public String processDfMsgRvsFromThread()
   {
-	  String messageId = getExternalParameterByKey(MESSAGE_ID);
-	    String topicId = getExternalParameterByKey(TOPIC_ID);
-	    if (messageId == null)
-	    {
-	      setErrorMessage(getResourceBundleString(MESSAGE_REFERENCE_NOT_FOUND));
-	      return gotoMain();
-	    }
-	    if (topicId == null)
-	    {
-	      setErrorMessage(getResourceBundleString(TOPC_REFERENCE_NOT_FOUND));
-	      return gotoMain();
-	    }
-	    // Message message=forumManager.getMessageById(Long.valueOf(messageId));
-	    Message message = messageManager.getMessageByIdWithAttachments(Long.valueOf(
-	        messageId));
-	    if (message == null)
-	    {
-	      setErrorMessage(getResourceBundleString(MESSAGE_WITH_ID) + messageId + getResourceBundleString(NOT_FOUND_WITH_QUOTE));
-	      return gotoMain();
-	    }
-	    message = messageManager.getMessageByIdWithAttachments(message.getId());
-	    selectedMessage = new DiscussionMessageBean(message, messageManager);
-	  return processDfMsgRvs();
+	String messageId = getExternalParameterByKey(MESSAGE_ID);
+	if (messageId == null)
+	{
+	  setErrorMessage(getResourceBundleString(MESSAGE_REFERENCE_NOT_FOUND));
+	  return gotoMain();
+	}
+	Message message = messageManager.getMessageByIdWithAttachments(Long.valueOf(messageId));
+	if (message == null)
+	{
+	  setErrorMessage(getResourceBundleString(MESSAGE_WITH_ID) + messageId + getResourceBundleString(NOT_FOUND_WITH_QUOTE));
+	  return gotoMain();
+	}
+	Optional<DiscussionTopic> topic = forumManager.getDiscussionTopicForMessage(message);
+	if (!topic.isPresent() || !uiPermissionsManager.hasAccessPrivileges(message, topic.get()))
+	{
+		return gotoMain();
+	}
+
+	selectedMessage = new DiscussionMessageBean(message, messageManager);
+	selectedMessage.setRead(messageManager.isMessageReadForUser(topic.get().getId(), message.getId()));
+	return processDfMsgRvs();
   }
 
   public String processDfMsgRvs()
   {
+	// make sure the current user is allowed to revise this message
+	if (!canRevise(selectedMessage.getMessage()))
+	{
+		selectedMessage = null; // something is up, clear this to be safe
+		return gotoMain();
+	}
 	selectedMessageCount = 0;
 	
     attachments.clear();
@@ -4553,7 +4630,22 @@ public class DiscussionForumTool {
       }
     }
 
+	setFromMainOrForumOrTopic();
     return "dfMsgRevise";
+  }
+
+  private boolean canRevise(Message message)
+  {
+	  Optional<DiscussionTopic> topic = forumManager.getDiscussionTopicForMessage(message);
+	  Optional<DiscussionForum> forum = topic.isPresent() ? forumManager.getDiscussionForumForTopic(topic.get()) : Optional.empty();
+	  if (!topic.isPresent() || !forum.isPresent())
+	  {
+		  log.error("Cannot find topic/forum for message {}.", message.getId());
+		  return false;
+	  }
+
+	  boolean isOwn = message.getCreatedBy().equals(getUserId());
+	  return uiPermissionsManager.isReviseAny(topic.get(), forum.get()) || (isOwn && uiPermissionsManager.isReviseOwn(topic.get(), forum.get()));
   }
 
   public String processDfMsgMove()
@@ -4587,11 +4679,21 @@ public class DiscussionForumTool {
     	processActionDisplayMessage();
     }
 
-    deleteMsg = true;
-    setErrorMessage(getResourceBundleString(CONFIRM_DELETE_MESSAGE));
+    if (selectedMessage != null && selectedMessage.getMessage() != null)
+	{
+		Long msgId = selectedMessage.getMessage().getId();
+		deleteMsg = msgId == null ? NO_MESSAGE : msgId;
+	}
+    setFromMainOrForumOrTopic();
     return MESSAGE_VIEW;
   }
 
+  public String processDfMsgDeleteConfirmNo()
+  {
+	  deleteMsg = NO_MESSAGE;
+      setFromMainOrForumOrTopic();
+      return returnFromPageOrAllMessages(MESSAGE_VIEW);
+  }
 
   public String processDfReplyMsgPost()
   {
@@ -4671,6 +4773,12 @@ public class DiscussionForumTool {
   		setErrorMessage(getResourceBundleString(ERROR_POSTING_THREAD));
   		return gotoMain();
   	}
+
+	if (StringUtils.isNotBlank(fromPage) && FLAT_VIEW.equals(fromPage) && selectedTopic != null){
+        processActionDisplayTopic();
+        return processActionDisplayFlatView();
+    }
+
     return processActionGetDisplayThread();
   }
 
@@ -4727,7 +4835,7 @@ public class DiscussionForumTool {
 
 	  this.attachments.clear();
 	  
-	  return MESSAGE_VIEW;
+	  return returnFromPageOrAllMessages(MESSAGE_VIEW);
   }
   
   
@@ -4885,7 +4993,8 @@ public class DiscussionForumTool {
       }
       return gotoMain();
     }
-    return MESSAGE_VIEW;
+    processActionDisplayThread();
+    return returnFromPageOrAllMessages(MESSAGE_VIEW);
   }
 
 	/**
@@ -4925,6 +5034,11 @@ public class DiscussionForumTool {
 
 	    this.attachments.clear();
 
+		if (StringUtils.isNotBlank(fromPage) && FLAT_VIEW.equals(fromPage) && selectedTopic != null){
+			processActionDisplayTopic();
+			return processActionDisplayFlatView();
+		}
+
 	    return processActionGetDisplayThread();
   }
 
@@ -4933,7 +5047,19 @@ public class DiscussionForumTool {
    */
   public boolean getDeleteMsg()
   {
-    return deleteMsg;
+	  if (deleteMsg == NO_MESSAGE)
+	  {
+		  return false;
+	  }
+
+	  // if we don't have a selected message or if deleteMsg is set to a different message, reset it
+	  boolean noSelectedMsg = selectedMessage == null || selectedMessage.getMessage() == null || selectedMessage.getMessage().getId() == null;
+	  if (noSelectedMsg || !selectedMessage.getMessage().getId().equals(deleteMsg))
+	  {
+		  deleteMsg = NO_MESSAGE;
+	  }
+
+	  return deleteMsg != NO_MESSAGE;
   }
 
   /**
@@ -4986,7 +5112,7 @@ public class DiscussionForumTool {
 	  if(!uiPermissionsManager.isDeleteAny(topic, forum) && !(selectedMessage.getIsOwn() && uiPermissionsManager.isDeleteOwn(topic, forum)))
 	  {
 		  setErrorMessage(getResourceBundleString(INSUFFICIENT_PRIVILEGES_TO_DELETE));
-		  this.deleteMsg = false;
+		  this.deleteMsg = NO_MESSAGE;
 		  return null;
 	  }
 	  
@@ -5008,7 +5134,7 @@ public class DiscussionForumTool {
 			  .getTopicByIdWithMessages(selectedTopic.getTopic().getId()));   
 	  selectedTopic.getTopic().setBaseForum(selectedForum.getForum());
 
-	  this.deleteMsg = false;
+	  this.deleteMsg = NO_MESSAGE;
 
 	  //Synoptic Message/Forums tool
 	  //Compare previous new message counts to current new message counts after
@@ -5023,9 +5149,15 @@ public class DiscussionForumTool {
 	  // go to thread view or all messages depending on
 	  // where come from
 	  if (!"".equals(fromPage)) {
-		  final String where = fromPage;
+		  String where = fromPage;
 		  fromPage = null;
 		  processActionGetDisplayThread();
+
+		  // If there are no messages in the thread after deletion, return to dfAllMessages/dfFlatView rather than an empty dfThreadView
+		  if (selectedThread.isEmpty()) {
+		      where = FLAT_VIEW.equals(where) ? FLAT_VIEW : ALL_MESSAGES;
+		  }
+
 		  return where;
 	  }
 	  else {
@@ -5055,7 +5187,7 @@ public class DiscussionForumTool {
 
       // Avoid the expensive queries below if there are no moderated topics
       if (moderatedTopics != null && !moderatedTopics.isEmpty()) {
-        membershipList = uiPermissionsManager.getCurrentUserMemberships();
+        membershipList = uiPermissionsManager.getCurrentUserMemberships(getSiteId());
         int numModTopicWithPerm = forumManager.getNumModTopicsWithModPermissionByPermissionLevel(membershipList, moderatedTopics);
 
         if (numModTopicWithPerm < 1) {
@@ -5239,7 +5371,7 @@ public class DiscussionForumTool {
 		  setErrorMessage(getResourceBundleString(NO_MSG_SEL_FOR_APPROVAL));
 	  else
 	  {
-		  refreshPendingMessages(uiPermissionsManager.getCurrentUserMemberships() , forumManager.getModeratedTopicsInSite());
+		  refreshPendingMessages(uiPermissionsManager.getCurrentUserMemberships(getSiteId()) , forumManager.getModeratedTopicsInSite());
 		  if (approved)
 			  setSuccessMessage(getResourceBundleString(MSGS_APPROVED));
 		  else
@@ -5270,6 +5402,7 @@ public class DiscussionForumTool {
 
 		  messageManager.markMessageApproval(msgId, false);
 		  selectedMessage = new DiscussionMessageBean(messageManager.getMessageByIdWithAttachments(msgId), messageManager);
+		  selectedMessage.setRead(true);
 		  refreshSelectedMessageSettings(selectedMessage.getMessage());
 		  setSuccessMessage(getResourceBundleString("cdfm_denied_alert"));
 		  getThreadFromMessage();
@@ -5279,7 +5412,7 @@ public class DiscussionForumTool {
 	  
 	  }
 	  
-	  refreshPendingMessages(uiPermissionsManager.getCurrentUserMemberships() , forumManager.getModeratedTopicsInSite());
+	  refreshPendingMessages(uiPermissionsManager.getCurrentUserMemberships(getSiteId()) , forumManager.getModeratedTopicsInSite());
 	  
 	  return MESSAGE_VIEW;
   }
@@ -5314,7 +5447,7 @@ public class DiscussionForumTool {
 		  
 	  }
 	  
-	  refreshPendingMessages(uiPermissionsManager.getCurrentUserMemberships() , forumManager.getModeratedTopicsInSite());
+	  refreshPendingMessages(uiPermissionsManager.getCurrentUserMemberships(getSiteId()) , forumManager.getModeratedTopicsInSite());
 	  
 	  return ADD_COMMENT;
   }
@@ -5344,6 +5477,7 @@ public class DiscussionForumTool {
 		  
 		  
 		  selectedMessage = new DiscussionMessageBean(messageManager.getMessageByIdWithAttachments(msgId), messageManager);
+		  selectedMessage.setRead(true);
 		  refreshSelectedMessageSettings(selectedMessage.getMessage());
 		  setSuccessMessage(getResourceBundleString("cdfm_approved_alert"));
 		  getThreadFromMessage();
@@ -5361,7 +5495,7 @@ public class DiscussionForumTool {
 	      		updateSynopticMessagesForForumComparingOldMessagesCount(getSiteId(), msg.getTopic().getBaseForum().getId(), msg.getTopic().getId(), beforeChangeHM, SynopticMsgcntrManager.NUM_OF_ATTEMPTS);
 	  }
 	  
-	  refreshPendingMessages(uiPermissionsManager.getCurrentUserMemberships() , forumManager.getModeratedTopicsInSite());
+	  refreshPendingMessages(uiPermissionsManager.getCurrentUserMemberships(getSiteId()) , forumManager.getModeratedTopicsInSite());
 	  
 	  return MESSAGE_VIEW;
   }
@@ -6110,6 +6244,7 @@ public class DiscussionForumTool {
             selectedMessage = new DiscussionMessageBean(
                 messageManager.getMessageByIdWithAttachments(selectedMessage.getMessage().getId()),
                 messageManager);
+			selectedMessage.setRead(true);
 
         	Message msg = selectedMessage.getMessage();
         //SAK-30711
@@ -6489,6 +6624,14 @@ public class DiscussionForumTool {
 	    //return displayTopicById(TOPIC_ID); // reconstruct topic again;
 	    setSelectedForumForCurrentTopic(selectedTopic.getTopic());
         selectedTopic = getDecoratedTopic(selectedTopic.getTopic());
+
+		// find out if we came from threaded view or flat view and return there
+		String viewId = FacesContext.getCurrentInstance().getViewRoot().getViewId();
+		if (viewId.endsWith("dfAllMessages.jsp"))  // a bit brittle but still relatively safe
+		{
+			return processActionDisplayThreadedView();
+		}
+
 	    return processActionDisplayFlatView();
   }
   
@@ -6626,7 +6769,7 @@ public class DiscussionForumTool {
               selectedRole = role.getId();
               i=1;
             }
-            DBMembershipItem item = forumManager.getAreaDBMember(membershipItems, role.getId(), MembershipItem.TYPE_ROLE);
+            DBMembershipItem item = forumManager.getAreaDBMember(membershipItems, role.getId(), MembershipItem.TYPE_ROLE, getContextSiteId());
             String level = item.getPermissionLevelName();
             siteMembers.add(new SelectItem(role.getId(), role.getId() + " (" + getResourceBundleString("perm_level_" + level.replaceAll(" ", "_").toLowerCase()) + ")"));
             permissions.add(new PermissionBean(item, permissionLevelManager));
@@ -6645,7 +6788,7 @@ public class DiscussionForumTool {
     	  for (Iterator groupIterator = groups.iterator(); groupIterator.hasNext();)
     	  {
     		  Group currentGroup = (Group) groupIterator.next();  
-    		  DBMembershipItem item = forumManager.getAreaDBMember(membershipItems,currentGroup.getTitle(), MembershipItem.TYPE_GROUP);
+    		  DBMembershipItem item = forumManager.getAreaDBMember(membershipItems,currentGroup.getTitle(), MembershipItem.TYPE_GROUP, getContextSiteId());
     		  String level = item.getPermissionLevelName();
     		  siteMembers.add(new SelectItem(currentGroup.getTitle(), currentGroup.getTitle() + " (" + getResourceBundleString("perm_level_" + level.replaceAll(" ", "_").toLowerCase()) + ")"));
     		  permissions.add(new PermissionBean(item, permissionLevelManager));
@@ -6706,40 +6849,31 @@ public class DiscussionForumTool {
     return ("/site/" + toolManager.getCurrentPlacement().getContext());
   }
 
+  // use this method to set the selected forum once it has been validated for access already, to avoid looking it up twice
+  private void setSelectedForumAfterValidation(DiscussionForum forum)
+  {
+	selectedForum = new DiscussionForumBean(forum, forumManager, userTimeService);
+    loadForumDataInForumBean(forum, selectedForum);
+	if("true".equalsIgnoreCase(ServerConfigurationService.getString("mc.defaultLongDescription")))
+	{
+		selectedForum.setReadFullDesciption(true);
+	}
+
+	setForumBeanAssign();
+  }
+
   /**
    * @param topic
    */
   private void setSelectedForumForCurrentTopic(DiscussionTopic topic)
   {
-    DiscussionForumBean oldSelectedForum = selectedForum;
-    DiscussionForum forum = (DiscussionForum) topic.getBaseForum();
-    if (forum == null)
-    {
+    Optional<DiscussionForum> forum = forumManager.getDiscussionForumForTopic(topic);
+	if (!forum.isPresent() || !uiPermissionsManager.hasAccessPrivileges(forum.get()))
+	{
+		return; // can't find a forum or don't have access to it, do nothing (maybe log it?)
+	}
 
-      String forumId = getExternalParameterByKey(FORUM_ID);
-      if (forumId == null || forumId.trim().length() < 1)
-      {
-        selectedForum = oldSelectedForum;
-        return;
-      }
-      forum = forumManager.getForumById(Long.valueOf(forumId));
-      if (forum == null)
-      {
-        selectedForum = oldSelectedForum;
-        return;
-      }
-    }
-    selectedForum = new DiscussionForumBean(forum, forumManager, userTimeService);
-    loadForumDataInForumBean(forum, selectedForum);
-    if (selectedForum == null) {
-    	selectedForum = oldSelectedForum;
-    }
-    if("true".equalsIgnoreCase(ServerConfigurationService.getString("mc.defaultLongDescription")))
-    {
-    	selectedForum.setReadFullDesciption(true);
-    }
-
-    setForumBeanAssign();
+	setSelectedForumAfterValidation(forum.get());
   }
 
   /**
@@ -7249,6 +7383,11 @@ public class DiscussionForumTool {
 			   selectedTopic = getDecoratedTopic(selectedTopic.getTopic());
 			   return ALL_MESSAGES;
 		   }
+		   if(FLAT_VIEW.equals(returnToPage) && selectedTopic != null)
+			{
+				selectedTopic = getDecoratedTopic(selectedTopic.getTopic());
+				return FLAT_VIEW;
+			}
 		   if(FORUM_DETAILS.equals(returnToPage) && selectedForum != null)
 		   {
 			   selectedForum = getDecoratedForum(selectedForum.getForum());
@@ -7464,22 +7603,36 @@ public class DiscussionForumTool {
 	 
 	 public String processActionDisplayInThread() {
 
-		 String forumId = getExternalParameterByKey("forumId");
-		 String topicId = getExternalParameterByKey("topicId");
-		 selectedMsgId = getExternalParameterByKey("msgId");
-		 DiscussionForum forum = forumManager.getForumById(Long.valueOf(forumId));
-		 DiscussionTopic topic = forumManager.getTopicById(Long.valueOf(topicId));
-		 setSelectedForumForCurrentTopic(topic);		
-		 selectedTopic = getDecoratedTopic(topic);
-		 selectedForum = getDecoratedForum(forum);
+		 String paramMsgId = getExternalParameterByKey("msgId");
+		 Message paramMsg = messageManager.getMessageByIdWithAttachments(Long.valueOf(paramMsgId));
+		 if (paramMsg == null) {
+			setErrorMessage(getResourceBundleString(MESSAGE_WITH_ID) + paramMsgId + getResourceBundleString(NOT_FOUND_WITH_QUOTE));
+			return gotoMain();
+		 }
+		 Optional<DiscussionTopic> topic = forumManager.getDiscussionTopicForMessage(paramMsg);
+		 if (!topic.isPresent()) {
+			return gotoMain();
+		 }
+		 Optional<DiscussionForum> forum = forumManager.getDiscussionForumForTopic(topic.get());
+		 if (!forum.isPresent()) {
+			return gotoMain();
+		 }
+		 if (!uiPermissionsManager.hasAccessPrivileges(paramMsg, topic.get())) {
+			setErrorMessage(getResourceBundleString(MESSAGE_WITH_ID) + paramMsgId + getResourceBundleString(NOT_FOUND_WITH_QUOTE));
+			return gotoMain();
+		 }
 
-		 if (uiPermissionsManager.isRead((DiscussionTopic)topic, forum)) {
-			 List messageList = messageManager.findMessagesByTopicId(topic.getId());
-			 Iterator messageIter = messageList.iterator();
-			 while(messageIter.hasNext()){
-				 Message mes = (Message) messageIter.next();					
-				 messageManager.markMessageReadForUser(topic.getId(), mes.getId(), true, getUserId());
-			 }
+		 selectedMsgId = paramMsgId;
+
+		 setSelectedForumForCurrentTopic(topic.get());
+		 selectedTopic = getDecoratedTopic(topic.get());
+		 selectedForum = getDecoratedForum(forum.get());
+
+		 List messageList = messageManager.findMessagesByTopicId(topic.get().getId());
+		 Iterator messageIter = messageList.iterator();
+		 while(messageIter.hasNext()){
+			 Message mes = (Message) messageIter.next();
+			 messageManager.markMessageReadForUser(topic.get().getId(), mes.getId(), true, getUserId());
 		 }
 
 		 return "dfStatisticsDisplayInThread";
@@ -7553,18 +7706,13 @@ public class DiscussionForumTool {
 
 		// get all users with notification level = 2
 		List<String> userlist = emailNotificationManager.getUsersToBeNotifiedByLevel( EmailNotification.EMAIL_REPLY_TO_ANY_MESSAGE);
-		
 		if (log.isDebugEnabled()){
-			log.debug("total count of Level 2 users = " + userlist.size());
-			Iterator iter1 = userlist.iterator();
-			while (iter1.hasNext()){
-				log.debug("level 2 users notify all msg:  sendEmailNotification: sending to  " + (String) iter1.next());
-			}
+			log.debug("total count of Level 2 users = {}", userlist.size());
+			userlist.stream().forEach(userUUID -> log.debug("level 2 users notify all msg:  sendEmailNotification: sending to  {}", userUUID));
 		}
-		
+
 		// need to get a list of authors for all messages on the current thread, and then check their notification level. 
 		//selectedThread  is a list of DiscussionMessageBean in the current thread.
-		
 		Iterator iter = selectedThread.iterator();
 		while (iter.hasNext()){
 			DiscussionMessageBean decoMessage = (DiscussionMessageBean) iter.next();
@@ -7581,84 +7729,84 @@ public class DiscussionForumTool {
 		}
 
 		//MSGCNTR-375 if this post needs to be moderated, only send the email notification to those with moderator permission
-		if(needsModeration) {
-			DiscussionTopic topic = (DiscussionTopic)reply.getTopic();
-			DiscussionForum forum = (DiscussionForum)topic.getBaseForum();
+		DiscussionTopic topic = (DiscussionTopic)reply.getTopic();
+		DiscussionForum forum = (DiscussionForum)topic.getBaseForum();
+		if (needsModeration) {
+			log.debug("Filtering userlist to only return moderators. Had: {}", userlist.size());
 
-			log.debug("Filtering userlist to only return moderators. Had: " + userlist.size());
-
-			List<String> nonModerators = new ArrayList<String>();
-			for(String userId: userlist) {
-				if(!uiPermissionsManager.isModeratePostings(topic, forum, userId)) {
-					log.debug("userId: " + userId + " is not a moderator");
+			List<String> nonModerators = new ArrayList<>();
+			for (String userId: userlist) {
+				if (!uiPermissionsManager.isModeratePostings(topic, forum, userId)) {
+					log.debug("userId: {} is not a moderator", userId);
 					nonModerators.add(userId);
 				}
 			}
 
 			userlist.removeAll(nonModerators);
-			log.debug("filtering complete. Now have: " + userlist.size());
-
+			log.debug("filtering complete. Now have: {}", userlist.size());
 		}
-		
+
+		// now printing out all users = # of messages in the thread - level 2 users
+		if (log.isDebugEnabled()) {
+			log.debug("now printing out all users, including duplicates count = {}", userlist.size());
+			userlist.stream().forEach(userUUID -> log.debug("sendEmailNotification: should include both level 1 and level 2 sending to  {}", userUUID));
+		}
+
 		// now we need to remove duplicates:
 		Set<String> set = new HashSet<String>();
 		set.addAll(userlist);
-		
-//		avoid overhead :D
-			log.debug("set size " + set.size());
-			log.debug("userlist size " + userlist.size());
+
+		// avoid overhead :D
+		log.debug("set size {}", set.size());
+		log.debug("userlist size {}", userlist.size());
 		if(set.size() < userlist.size()) {
 			userlist.clear();
 			userlist.addAll(set);
 		}
-		
-		//MSGCNTR-741 need to filter out post first users
-		if (((DiscussionTopic)reply.getTopic()).getPostFirst()) {
-		    Topic topicWithMessages = forumManager.getTopicByIdWithMessagesAndAttachments(reply.getTopic().getId());
-		    userlist.removeAll(getNeedToPostFirst(userlist, (DiscussionTopic)reply.getTopic(), topicWithMessages.getMessages()));
+
+		// now printing out all users again after removing duplicate
+		if (log.isDebugEnabled()) {
+			log.debug("now printing out all users again after removing duplicate count = {}", userlist.size());
+			userlist.stream().forEach(userUUID -> log.debug("{}", userUUID));
 		}
 
-		// now printing out all users = # of messages in the thread - level 2 users
-		if (log.isDebugEnabled()){
-			log.debug("now printing out all users, including duplicates count = " + userlist.size());
-			Iterator iter1 = userlist.iterator();
-			while (iter1.hasNext()){
-				log.debug("sendEmailNotification: should include both level 1 and level 2 sending to  " + (String) iter1.next());
-			}
+		//MSGCNTR-741 need to filter out post first users
+		if (topic.getPostFirst()) {
+			Topic topicWithMessages = forumManager.getTopicByIdWithMessagesAndAttachments(reply.getTopic().getId());
+			userlist.removeAll(getNeedToPostFirst(userlist, (DiscussionTopic)reply.getTopic(), topicWithMessages.getMessages()));
 		}
-		
-		// now printing out all users again after removing duplicate
-		if (log.isDebugEnabled()){
-			log.debug("now printing out all users again after removing duplicate count = " + userlist.size());
-			Iterator iter1 = userlist.iterator();
-			while (iter1.hasNext()){
-				log.debug("" + (String) iter1.next());
-			}
+
+		// Filter recipients if topic is date restricted
+		if (!topic.getAvailability()) {
+			// If the topic is not currently open, and the user does not have permission to change its' settings (they can't see the topic and can't change it to be visible),
+			// so they should not receive notificaitons
+			userlist.removeAll(userlist.stream().filter(userUUID -> !uiPermissionsManager.isChangeSettings(topic, forum, userUUID)).collect(Collectors.toList()));
 		}
-		
-		//now we need to filer the list\
-		if (log.isDebugEnabled())
-			log.debug("About to filter list");
+
+		// Filter recipients if forum is date restricted
+		if (!forum.getAvailability()) {
+			// If the forum is not currently open, and the user does not have permission to change its' settings (they can't see the forum and can't change it to be visible),
+			// so they should not receive notificaitons
+			userlist.removeAll(userlist.stream().filter(userUUID -> !uiPermissionsManager.isChangeSettings(forum, userUUID)).collect(Collectors.toList()));
+		}
+
+		//now we need to filer the list
+		log.debug("About to filter list");
 		List<String> finalList = emailNotificationManager.filterUsers(userlist, currthread.getMessage().getTopic());
-		
 		List<String> useremaillist =  getUserEmailsToBeNotifiedByLevel(finalList);
 
-		if (log.isDebugEnabled()){
-			log.debug("now printint unique emails , count = " + useremaillist.size());
-			Iterator useremaillistiter = useremaillist.iterator();
-			while (useremaillistiter.hasNext()){
-				log.debug("sendEmailNotification: sending to  " + (String) useremaillistiter.next());
-			}
+		if (log.isDebugEnabled()) {
+			log.debug("now printint unique emails , count = {}", useremaillist.size());
+			useremaillist.stream().forEach(email -> log.debug("sendEmailNotification: sending to  {}", email));
 		}
-		
+
 		if (userlist.isEmpty()) {
 			log.debug("No users need to notified.");
 			return;
 		}
-		
+
 		ForumsEmailService emailService = new ForumsEmailService(useremaillist, reply, currthread);
 		emailService.send();
-
 	}
 	
 	DeveloperHelperService developerHelperService;
@@ -7769,8 +7917,17 @@ public class DiscussionForumTool {
 
 	  String forumId = getExternalParameterByKey(FORUM_ID);
 	  DiscussionForum forum = forumManager.getForumById(Long.valueOf(forumId));
-	  selectedForum = new DiscussionForumBean(forum, forumManager, userTimeService);
-	  loadForumDataInForumBean(forum, selectedForum);
+
+	  // make sure the user has permission to duplicate forums and the forum to copy belongs to the current site
+	  // and the user has read access to it
+	  String currentSiteId = StringUtils.trimToEmpty(toolManager.getCurrentPlacement().getContext());
+	  if (!getNewForum() || currentSiteId.isEmpty() || !currentSiteId.equals(forumManager.getSiteIdForForum(forum))
+			  || !uiPermissionsManager.hasAccessPrivileges(forum))
+	  {
+		  log.error("Forum {} could not be duplicated. Forum does not belong to current site or user does not have permission.");
+		  return gotoMain();
+	  }
+	  selectedForum = getDecoratedForum(forum);
       selectedForum.getForum().setTitle(getResourceBundleString(DUPLICATE_COPY_TITLE, new Object[] {selectedForum.getForum().getTitle()}));
 	  selectedForum.setMarkForDuplication(true);
 	  return FORUM_SETTING;
@@ -7838,32 +7995,33 @@ public class DiscussionForumTool {
    */
   public String processActionDuplicateTopicMainConfirm()
   {
-	  {
-		  log.debug("processActionDuplicateTopicMainConfirm()");
+	log.debug("processActionDuplicateTopicMainConfirm()");
 
-		  DiscussionTopic topic = null;
-		  String topicId = getExternalParameterByKey(TOPIC_ID);
-		  if(StringUtils.isNotBlank(topicId) && !"null".equals(topicId)){
-			  topic = (DiscussionTopic) forumManager.getTopicByIdWithAttachments(Long.valueOf(topicId));
-		  } else if(selectedTopic != null) {
-			  topic = selectedTopic.getTopic();
-		  }
-		  if (topic == null)
-		  {
-			  return gotoMain();
-		  }
-		  setSelectedForumForCurrentTopic(topic);
-		  if(!uiPermissionsManager.isNewTopic(selectedForum.getForum()))
-		  {
-			  setErrorMessage(getResourceBundleString(INSUFFICIENT_PRIVILEGES_NEW_TOPIC));
-			  return gotoMain();
-		  }
-		  selectedTopic = new DiscussionTopicBean(topic, selectedForum.getForum(), forumManager, rubricsService, userTimeService);
-		  loadTopicDataInTopicBean(topic, selectedTopic);
-          selectedTopic.getTopic().setTitle(getResourceBundleString(DUPLICATE_COPY_TITLE, new Object[] {selectedTopic.getTopic().getTitle()}));
-		  selectedTopic.setMarkForDuplication(true);
-		  return TOPIC_SETTING;
-	  }
+	DiscussionTopic topic = null;
+	String topicId = getExternalParameterByKey(TOPIC_ID);
+	if(StringUtils.isNotBlank(topicId) && !"null".equals(topicId)){
+	  topic = (DiscussionTopic) forumManager.getTopicByIdWithAttachments(Long.valueOf(topicId));
+	} else if(selectedTopic != null) {
+	  topic = selectedTopic.getTopic();
+	}
+	if (topic == null)
+	{
+	  return gotoMain();
+	}
+
+	Optional<DiscussionForum> forum = forumManager.getDiscussionForumForTopic(topic);
+	if (!forum.isPresent() || !uiPermissionsManager.isNewTopic(forum.get()) || !uiPermissionsManager.hasAccessPrivileges(topic))
+	{
+		setErrorMessage(getResourceBundleString(INSUFFICIENT_PRIVILEGES_NEW_TOPIC));
+		return gotoMain();
+	}
+	setSelectedForumAfterValidation(forum.get());
+	selectedTopic = getDecoratedTopic(topic);
+
+	selectedTopic.getTopic().setTitle(getResourceBundleString(DUPLICATE_COPY_TITLE, new Object[] {selectedTopic.getTopic().getTitle()}));
+	selectedTopic.setMarkForDuplication(true);
+	setTopicGradeAssign(selectedTopic, selectedForum.getForum().getDefaultAssignName());
+	return TOPIC_SETTING;
   }
 
   public String processActionDuplicateTopic()
@@ -8455,6 +8613,7 @@ public class DiscussionForumTool {
 	}
 	
 	// MSGCNTR-241 move threads
+	@Deprecated
 	public String processMoveMessage() {
 		return MESSAGE_MOVE_THREADS;
 	}
@@ -8484,6 +8643,8 @@ public class DiscussionForumTool {
 							// do nothing. Skip forums that are locked. topics in locked forums should not show in the dialog
 						} else if (topic.getLocked() == null || topic.getLocked().equals(Boolean.TRUE)) {
 							// do nothing, skip locked topics. do not show them in move thread dialog
+						} else if (!uiPermissionsManager.hasAccessPrivileges(topic, tmpforum)) {
+							// do nothing, user can't see this topic.
 						} else {
 							parseTopics(topic, topicMap, tmpforum);
 						}
@@ -8543,7 +8704,7 @@ public class DiscussionForumTool {
 
 	public String processMoveThread() {
 		Long sourceTopicId = this.selectedTopic.getTopic().getId();
-		if (log.isDebugEnabled()) log.debug("Calling processMoveThread source topic is " + sourceTopicId);
+		log.debug("Calling processMoveThread source topic is {}", sourceTopicId);
 		List checkedThreads = getRequestParamArray("moveCheckbox");
 		List destTopicList = getRequestParamArray("selectedTopicid");
 
@@ -8559,7 +8720,7 @@ public class DiscussionForumTool {
 				return gotoMain();
 			}
 		}
-		if (log.isDebugEnabled()) log.debug("Calling processMoveThread dest topic is " + desttopicIdstr);
+		log.debug("Calling processMoveThread dest topic is {}", desttopicIdstr);
 
 		List checkbox_reminder = getRequestParamArray("moveReminder");
 		boolean checkReminder = false;
@@ -8571,21 +8732,55 @@ public class DiscussionForumTool {
 			// reminderVal = Boolean.parseBoolean(checkReminder);
 		}
 
-		if (log.isDebugEnabled()) log.debug("Calling processMoveThread checkReminder is " + checkReminder);
+		log.debug("Calling processMoveThread checkReminder is {}", checkReminder);
 
 		Long desttopicId = Long.parseLong(desttopicIdstr);
+
+		/*
+		 * May be possible to craft "Move Conversation(s)" call while the selected topic doesn't have isMoveThread permission.
+		 * Verify that we in fact have isMovePostings permission:
+		 */
+		DiscussionTopic sourceTopic = selectedTopic.getTopic();
+		Optional<DiscussionForum> sourceForum = forumManager.getDiscussionForumForTopic(sourceTopic);
+		if (!sourceForum.isPresent() || !uiPermissionsManager.isMovePostings(sourceTopic, sourceForum.get())) {
+			return gotoMain();
+		}
+
+		/*
+		 * The topics available in the UI are sent over with JSON;
+		 * The JSON is populated in getMoveThreadJSON().
+		 * Used its criteria for a topics' inclusion to validate desttopicId here.
+		 *     Criteria: They are queried from this.getSiteId().
+		 *     They are then filtered to include only Boolean.FALSE.equals(tmpForum.getLocked()) && Boolean.FALSE.equals(topic.getLocked(). The parseTopics() method does no filtering.
+		 *     Nothing currently filters out topics the user can't access.
+		 */
 		DiscussionTopic desttopic = forumManager.getTopicById(desttopicId);
+		Optional<DiscussionForum> destforum = forumManager.getDiscussionForumForTopic(desttopic);
+		if (!destforum.isPresent() ||
+				!Boolean.FALSE.equals(desttopic.getLocked()) ||
+				!Boolean.FALSE.equals(destforum.get().getLocked()) ||
+				!forumManager.getSiteIdForForum(sourceForum.get()).equals(forumManager.getSiteIdForForum(destforum.get())) ||
+				!uiPermissionsManager.hasAccessPrivileges(desttopic, destforum.get())) {
+			return gotoMain();
+		}
+
 		// now update topic id in mfr_message_t table, including all childrens (direct and indirect),
 		// For each move, also add a row to the mfr_move_history_t table.
 
-		Message mes = null;
 		Iterator mesiter = checkedThreads.iterator();
-		if (log.isDebugEnabled()) log.debug("processMoveThread checkedThreads size = " + checkedThreads.size());
+		log.debug("processMoveThread checkedThreads size = {}", checkedThreads.size());
 		while (mesiter.hasNext()) {
-			Long messageId = new Long((String) mesiter.next());
-			mes = messageManager.getMessageById(messageId);
-			if (log.isDebugEnabled()) log.debug("processMoveThread messageId = " + mes.getId());
-			if (log.isDebugEnabled()) log.debug("processMoveThread message title = " + mes.getTitle());
+			Long messageId = Long.valueOf((String) mesiter.next());
+			Message mes = messageManager.getMessageById(messageId);
+
+			// Disallow moving message that don't actually belong to the source topic (block malicious HTML manipulation)
+			if (!Objects.equals(sourceTopicId, mes.getTopic().getId())) {
+				log.warn("Attempt to move message user doesn't have permission to move: userId={}, messageId={}, sourceTopicID={}, destinationTopicID={}",
+						 userDirectoryService.getCurrentUser().getId(), messageId, sourceTopicId, mes.getTopic().getId());
+				continue;
+			}
+			log.debug("processMoveThread messageId = {}", mes.getId());
+			log.debug("processMoveThread message title = {}", mes.getTitle());
 			mes.setTopic(desttopic);
 			mes = messageManager.saveOrUpdateMessage(mes);
 
@@ -8598,14 +8793,14 @@ public class DiscussionForumTool {
 
 			List childrenMsg = new ArrayList(); // will store a list of child messages
 			messageManager.getChildMsgs(messageId, childrenMsg);
-			if (log.isDebugEnabled()) log.debug("processMoveThread childrenMsg for  " + messageId + "   size = " + childrenMsg.size());
+			log.debug("processMoveThread childrenMsg for  {}   size = {}", messageId, childrenMsg.size());
 			Iterator childiter = childrenMsg.iterator();
 
 			// update topic id for each child msg.
 			while (childiter.hasNext()) {
 				Message childMsg = (Message) childiter.next();
-				if (log.isDebugEnabled()) log.debug("processMoveThread messageId = " + childMsg.getId());
-				if (log.isDebugEnabled()) log.debug("processMoveThread message title = " + childMsg.getTitle());
+				log.debug("processMoveThread messageId = {}", childMsg.getId());
+				log.debug("processMoveThread message title = {}", childMsg.getTitle());
 				childMsg.setTopic(desttopic);
 				childMsg = messageManager.saveOrUpdateMessage(childMsg);
 				messageManager.saveMessageMoveHistory(childMsg.getId(), desttopicId, sourceTopicId, checkReminder);
@@ -9204,100 +9399,65 @@ public class DiscussionForumTool {
     		DiscussionTopicBean tmpSelectedTopic = selectedTopic;
     		DiscussionForumBean tmpSelectedForum = selectedForum;
     		DiscussionMessageBean tmpSelectedThreadHead = selectedThreadHead;
-    		String forumContextId = getSiteId();
-    		//Check Message input field
     		if(checkCurrentMessageId){
-    			try{	
-    				String msgIdStr = getExternalParameterByKey(CURRENT_MESSAGE_ID);
-    				long msgId = Long.parseLong(msgIdStr);
-    				if(tmpSelectedMessage == null || tmpSelectedMessage.getMessage() == null 
-    						|| (!tmpSelectedMessage.getMessage().getId().equals(msgId))){
-    					Message threadMessage = messageManager.getMessageByIdWithAttachments(msgId);
-    					tmpSelectedMessage = new DiscussionMessageBean(threadMessage, messageManager);
-    					//selected message has changed, make sure we set the selected thread head
-    					tmpSelectedThreadHead = new DiscussionMessageBean(tmpSelectedMessage.getMessage(), messageManager);
-    				    //make sure we have the thread head of depth 0
-    				    while(tmpSelectedThreadHead.getMessage().getInReplyTo() != null){
-    				    	threadMessage = messageManager.getMessageByIdWithAttachments(tmpSelectedThreadHead.getMessage().getInReplyTo().getId());
-    				    	tmpSelectedThreadHead = new DiscussionMessageBean(threadMessage, messageManager);
-    				    }
-    				}
-    			}catch(Exception e){
-    				log.error(e.getMessage(), e);
-    			}
-    		}
-    		//Check Forum input field
-    		try{
-    			String forumIdStr = getExternalParameterByKey(CURRENT_FORUM_ID);
-    			long forumId = Long.parseLong(forumIdStr);
-    			if(tmpSelectedForum == null || tmpSelectedForum.getForum() == null 
-    					|| (!tmpSelectedForum.getForum().getId().equals(forumId))){
-    				DiscussionForum forum = forumManager.getForumById(forumId);
-    				tmpSelectedForum = getDecoratedForum(forum);
-    				//forum changed, so make sure you use that forum's site id:
-    				forumContextId = forumManager.getContextForForumById(forum.getId());
-    			}
-    		}catch(Exception e){
-    			log.error(e.getMessage(), e);
-    		}
+                //Check Message input field
+    			String msgIdStr = getExternalParameterByKey(CURRENT_MESSAGE_ID);
+    			long msgId = Long.parseLong(msgIdStr);
+    			if(tmpSelectedMessage == null || tmpSelectedMessage.getMessage() == null
+    					|| (!tmpSelectedMessage.getMessage().getId().equals(msgId))){
+    				//selected message has changed, make sure we set the selected thread head
+    				Message threadMessage = messageManager.getMessageByIdWithAttachments(msgId);
 
-    		//Check Topic: input field
-    		try{
+    				// Build hierarchy and confirm access:
+    				if (threadMessage == null) {
+    					return false;
+    				}
+    				Optional<DiscussionTopic> topic = forumManager.getDiscussionTopicForMessage(threadMessage);
+    				if (!topic.isPresent()) {
+    					return false;
+    				}
+    				Optional<DiscussionForum> forum = forumManager.getDiscussionForumForTopic(topic.get());
+    				if (!forum.isPresent()) {
+    					return false;
+    				}
+    				if (!uiPermissionsManager.hasAccessPrivileges(threadMessage, topic.get())) {
+    					return false;
+    				}
+    				tmpSelectedMessage = new DiscussionMessageBean(threadMessage, messageManager);
+    				tmpSelectedTopic = getDecoratedTopic(topic.get());
+    				tmpSelectedForum = getDecoratedForum(forum.get());
+
+    				tmpSelectedThreadHead = new DiscussionMessageBean(tmpSelectedMessage.getMessage(), messageManager);
+    				//make sure we have the thread head of depth 0
+    				while(tmpSelectedThreadHead.getMessage().getInReplyTo() != null){
+    					threadMessage = messageManager.getMessageByIdWithAttachments(tmpSelectedThreadHead.getMessage().getInReplyTo().getId());
+    					tmpSelectedThreadHead = new DiscussionMessageBean(threadMessage, messageManager);
+    				}
+    			}
+    		} else {
+    			// Message param is ignored; user must be authorized only against the topic
     			String topicIdStr = getExternalParameterByKey(CURRENT_TOPIC_ID);
     			long topicId = Long.parseLong(topicIdStr);
-    			if(tmpSelectedTopic == null || tmpSelectedTopic.getTopic() == null || tmpSelectedTopic.getTopic().getBaseForum() == null
-    					|| (!tmpSelectedTopic.getTopic().getId().equals(topicId))){
-    				//selected message doesn't match the current message input,
-    				//verify user has access to parameter message and use that one
-
+    			if(tmpSelectedTopic == null || tmpSelectedTopic.getTopic() == null
+    					|| (!tmpSelectedTopic.getTopic().getId().equals(topicId))) {
     				DiscussionTopic topicWithMsgs = (DiscussionTopic) forumManager.getTopicByIdWithMessages(topicId);
-    				tmpSelectedTopic = getDecoratedTopic(topicWithMsgs);    			
+    				if (topicWithMsgs == null) {
+    					return false;
+    				}
+    				Optional<DiscussionForum> forum = forumManager.getDiscussionForumForTopic(topicWithMsgs);
+    				if (!forum.isPresent()) {
+    					return false;
+    				}
+    				if (!uiPermissionsManager.hasAccessPrivileges(topicWithMsgs, forum.get())) {
+    					return false;
+    				}
+    				tmpSelectedTopic = getDecoratedTopic(topicWithMsgs);
+    				tmpSelectedForum = getDecoratedForum(forum.get());
     			}
-    		}catch(Exception e){
-    			log.error(e.getMessage(), e);
     		}
-    		//verify everything is set properly
-    		//Obviously this could be done in one huge if statement, but it's not as easy to ready and understand the logic,
-    		//so I left it broken out
 
-    		//is message set
-    		if(checkCurrentMessageId && (tmpSelectedMessage == null || tmpSelectedMessage.getMessage() == null)){
-    			log.info(methodCalled + ": can not check permissions against a null message. user: " + getUserId());
-    			return false;
-    		}
-    		//is forum set
-    		if(tmpSelectedForum == null || tmpSelectedForum.getForum() == null){
-    			log.info(methodCalled + ": can not check permissions against a null forum. user: " + getUserId());
-    			return false;
-    		}
-    		//is topic set
-    		if(tmpSelectedTopic == null || tmpSelectedTopic.getTopic() == null){
-    			log.info(methodCalled + ": can not check permissions against a null topic. user: " + getUserId());
-    			return false;
-    		}
-    		//check topic belongs to the forum
-    		if(!tmpSelectedForum.getForum().getId().equals(tmpSelectedTopic.getTopic().getBaseForum().getId())){
-    			log.info(methodCalled + ": topic: " + tmpSelectedTopic.getTopic().getId() + " does not belong to the forum: " + tmpSelectedForum.getForum().getId() + ". user: " + getUserId());
-    			return false;    				
-    		}
-    		//check message belongs to the topic
-    		if(checkCurrentMessageId && !tmpSelectedMessage.getMessage().getTopic().getId().equals(tmpSelectedTopic.getTopic().getId())){
-    			log.info(methodCalled + ": message: " + tmpSelectedMessage.getMessage().getId() + " does not belong to the topic: " + tmpSelectedTopic.getTopic().getId() + ".  user: " + getUserId());
-    			return false;
-    		}
-    		//is topic locked?
-    		if(tmpSelectedTopic.getTopic().getLocked()){
-    			setErrorMessage(getResourceBundleString(TOPIC_LOCKED, new Object[]{tmpSelectedTopic.getTopic().getTitle()}));
-    			log.info(methodCalled + ": Topic is locked: " + tmpSelectedTopic.getTopic().getTitle() + ".  user: " + getUserId());
-    			return false;
-    		}
-    		//is forum locked?
-    		if(tmpSelectedForum != null && tmpSelectedForum.getForum().getLocked()){
-    			setErrorMessage(getResourceBundleString(FORUM_LOCKED, new Object[]{tmpSelectedForum.getForum().getTitle()}));
-    			log.info(methodCalled + ": Forum is locked: " + tmpSelectedForum.getForum().getTitle() + ".  user: " + getUserId());
-    			return false;
-    		}
-    		
+			String forumContextId = forumManager.getSiteIdForTopic(tmpSelectedTopic.getTopic());
+
     		//can the user reply to only existing messages (Check this first)
     		if (tmpSelectedMessage != null && (canReply && !uiPermissionsManager.isNewResponseToResponse(tmpSelectedTopic.getTopic(), tmpSelectedForum.getForum(), getUserId(), forumContextId))) {
     			setErrorMessage(getResourceBundleString(INSUFFICIENT_PRIVILEAGES_TO_POST_THREAD, new Object[]{tmpSelectedTopic.getTopic().getTitle()}));
@@ -9327,7 +9487,7 @@ public class DiscussionForumTool {
     			return false;
     		}
 
-    		//ok Everything matched, so set the current values in case they changed:
+    		// action is authorized, so set the current values in case they changed:
     		selectedMessage = tmpSelectedMessage;
     		selectedThreadHead = tmpSelectedThreadHead;
     		selectedTopic = tmpSelectedTopic;
@@ -9421,5 +9581,50 @@ public class DiscussionForumTool {
     public String getAttachmentReadableSize(final String attachmentSize) {
       return FileUtils.byteCountToDisplaySize(Long.parseLong(attachmentSize));
     }
+
+	public List<DiscussionForumBean> getSelectedForumAsList() {
+		DiscussionForumBean forum = getSelectedForum();
+		return forum == null ? Collections.emptyList() : Collections.singletonList(forum);
+	}
+
+	private Optional<Date> getMostRecentMsgDateForTopic(DiscussionTopicBean topic)
+	{
+		List<DiscussionMessageBean> msgs = topic.getMessages();
+		if (msgs == null)
+		{
+			msgs = Collections.emptyList();
+		}
+
+		return msgs.stream().filter(m -> m.getMessage() != null && m.getMessage().getCreated() != null)
+				.map(m -> m.getMessage().getCreated()).sorted(Comparator.reverseOrder()).findFirst();
+	}
+
+	public String getConfirmDeleteSelectedTopicWarning()
+	{
+		int numMsgs = getSelectedTopic().getTotalNoMessages();
+		String first = getResourceBundleString("cdfm_delete_topic", new Object[]{numMsgs});
+		String mid = numMsgs > 0 ? formatMidDate(getMostRecentMsgDateForTopic(getSelectedTopic()), "cdfm_delete_topic_most_recent") : "";
+		String last = getResourceBundleString("cdfm_delete_topic_sure");
+
+		return String.format("%s %s %s", first, mid, last);
+	}
+
+	public String getConfirmDeleteSelectedForumWarning()
+	{
+		DiscussionForumBean forum = getSelectedForum();
+		int numTopics = forum.getTopicCount();
+		int numMsgs = forum.getTopics().stream().map(DiscussionTopicBean::getTotalNoMessages).reduce(0, Integer::sum);
+		String first = getResourceBundleString("cdfm_delete_forum", new Object[]{numTopics, numMsgs});
+		String last = getResourceBundleString("cdfm_delete_forum_sure");
+
+		return String.format("%s %s", first, last);
+	}
+
+	private String formatMidDate(Optional<Date> date, String bundleKey)
+	{
+		final SimpleDateFormat formatter = new SimpleDateFormat(getResourceBundleString("date_format_date"), getUserLocale());
+		formatter.setTimeZone(getUserTimeZone());
+		return date.map(d -> getResourceBundleString(bundleKey, new Object[]{formatter.format(d)})).orElse("");
+	}
 
 }
